[gd_scene load_steps=22 format=3 uid="uid://cpef4ue6v2ma0"]

[ext_resource type="Texture2D" uid="uid://cn0okid1rh8fj" path="res://graphics/tile_forest_atlas.png" id="1_gmiwb"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="1_k712e"]
[ext_resource type="Texture2D" uid="uid://clbchorfe73cf" path="res://graphics/player_animation.png" id="2_2ehfg"]
[ext_resource type="Texture2D" uid="uid://nnh0igwdve0u" path="res://graphics/wand1.png" id="3_keh4t"]
[ext_resource type="Script" path="res://scripts/WeponHolder.gd" id="3_mpctm"]
[ext_resource type="Texture2D" uid="uid://conhviow12h36" path="res://graphics/joystick.png" id="4_esmm6"]
[ext_resource type="Script" path="res://scripts/Joystick.gd" id="5_2bnxb"]
[ext_resource type="Texture2D" uid="uid://cqoap30so5ykd" path="res://graphics/joystick_1.png" id="5_abf5x"]
[ext_resource type="Script" path="res://scripts/WorldGenerator.gd" id="7_ewr5t"]
[ext_resource type="Texture2D" uid="uid://cdr6t44v3wafl" path="res://graphics/joystick_2.png" id="7_x3nb3"]
[ext_resource type="Script" path="res://scripts/JoystickAttack.gd" id="9_ldwna"]
[ext_resource type="PackedScene" uid="uid://djbafi8x6va0u" path="res://objects/GreenSlime.tscn" id="12_8rhbl"]

[sub_resource type="Animation" id="Animation_0ia1r"]
resource_name = "idleDown"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_ne4qq"]
resource_name = "idleSide"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fuxjb"]
resource_name = "idleUp"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_s75hl"]
resource_name = "runningDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_sbcrl"]
resource_name = "runningSide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}

[sub_resource type="Animation" id="Animation_s2o8c"]
resource_name = "runningUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdvr0"]
_data = {
"idleDown": SubResource("Animation_0ia1r"),
"idleSide": SubResource("Animation_ne4qq"),
"idleUp": SubResource("Animation_fuxjb"),
"runningDown": SubResource("Animation_s75hl"),
"runningSide": SubResource("Animation_sbcrl"),
"runningUp": SubResource("Animation_s2o8c")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dh31l"]
texture = ExtResource("1_gmiwb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_mirr4"]
sources/0 = SubResource("TileSetAtlasSource_dh31l")

[node name="MainScene" type="Node2D"]
scale = Vector2(5, 5)

[node name="Player" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
z_index = 10
position = Vector2(121, 74.4)
script = ExtResource("1_k712e")

[node name="Player" type="Sprite2D" parent="Player"]
position = Vector2(0, 1)
texture = ExtResource("2_2ehfg")
hframes = 13
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Player"]
autoplay = "idleDown"
libraries = {
"": SubResource("AnimationLibrary_pdvr0")
}

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="WeponHolder" type="Node2D" parent="Player"]
script = ExtResource("3_mpctm")

[node name="Wand1" type="Sprite2D" parent="Player/WeponHolder"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_keh4t")
offset = Vector2(40, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_scale = 3.629

[node name="LeftBottom" type="Control" parent="CanvasLayer"]
layout_direction = 1
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -688.0
offset_right = 40.0
offset_bottom = -648.0
grow_vertical = 0
scale = Vector2(5, 5)

[node name="Panel" type="Panel" parent="CanvasLayer/LeftBottom"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="JoystickMovement" type="Sprite2D" parent="CanvasLayer/LeftBottom/Panel"]
position = Vector2(25.2, 111.6)
texture = ExtResource("4_esmm6")

[node name="Joystick" type="Sprite2D" parent="CanvasLayer/LeftBottom/Panel/JoystickMovement"]
unique_name_in_owner = true
texture = ExtResource("5_abf5x")
script = ExtResource("5_2bnxb")

[node name="RigthBottom" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="CanvasLayer/RigthBottom"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="JoystickAttack" type="Sprite2D" parent="CanvasLayer/RigthBottom/Panel"]
position = Vector2(-69, -81)
scale = Vector2(5, 5)
texture = ExtResource("4_esmm6")

[node name="JoystickAttack" type="Sprite2D" parent="CanvasLayer/RigthBottom/Panel/JoystickAttack"]
unique_name_in_owner = true
position = Vector2(0, -0.199997)
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_x3nb3")
script = ExtResource("9_ldwna")

[node name="JoystickCenter" type="Marker2D" parent="CanvasLayer/RigthBottom/Panel/JoystickAttack"]

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Node2D"]
tile_set = SubResource("TileSet_mirr4")
cell_quadrant_size = 32
format = 2
script = ExtResource("7_ewr5t")

[node name="GreenSlime" parent="." instance=ExtResource("12_8rhbl")]
position = Vector2(57.8, 80.4)

[node name="GreenSlime2" parent="." instance=ExtResource("12_8rhbl")]
position = Vector2(124, 122.6)

[node name="GreenSlime3" parent="." instance=ExtResource("12_8rhbl")]
position = Vector2(252.2, 98)

[node name="GreenSlime4" parent="." instance=ExtResource("12_8rhbl")]
position = Vector2(261.2, 189)
